Fix legend display on Safari

--- a/templates/assets/reset.css
+++ b/templates/assets/reset.css
@@ -249,7 +249,7 @@ legend {
   display: table; /* 1 */
   max-width: 100%; /* 1 */
   padding: 0; /* 3 */
-  white-space: normal; /* 1 */
+  white-space: nowrap; /* 1 */
 }
 
 /**
